# littlelemon

./: README.md  pyproject.toml
LittleLemon/: settings.py
LittleLemonDRF/: models.py  serializers.py  views.py
LittleLemonDRF/migrations/: 0001_initial.py
