[tool.poetry]
name = "littlelemon"
version = "0.1.0"
description = ""
authors = ["Daniel Mizuki <dmizuki12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
djangorestframework = "^3.15.1"
djangorestframework-xml = "^2.0.0"
djoser = "^2.2.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
